[PIR-530] Fixed slate theme's pentaho-listbox style to show scrollbars when necessary (same as the onyx theme).

--- a/pentaho-gwt-widgets/src/org/pentaho/gwt/widgets/themes/public/themes/slate/globalSlate.css
+++ b/pentaho-gwt-widgets/src/org/pentaho/gwt/widgets/themes/public/themes/slate/globalSlate.css
@@ -1540,7 +1540,8 @@ box-shadow: 2px 2px 6px 1px #747474;*/
 
 .pentaho-listbox {
     border: 1px solid #848484;
-    background-color: white
+    background-color: white;
+    overflow: auto;
 }
 
 .pentaho-listitem {
